<?xml version="1.0"?>
<package format="2">
  <name>hamer_mini</name>
  <version>0.5.1</version>
  <description>The hamer_mini package</description>
  <maintainer email="akerdogmus@gmail.com">AKE</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend> 
  <build_depend>roslaunch</build_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>husky_description</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>rviz_imu_plugin</exec_depend>

  <export>

  </export>
</package>
